# 3d-space--sim

./: CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  PATCH_NOTES.md  README.md  configure
apps/stellar_game/: main.cpp
apps/stellar_sandbox/: CMakeLists.txt  main.cpp
include/stellar/core/: Args.h  Assert.h  Hash.h  JsonWriter.h  Log.h  Random.h  Types.h
include/stellar/econ/: Cargo.h  Commodity.h  RoutePlanner.h
include/stellar/math/: Math.h  Vec3.h
include/stellar/proc/: GalaxyGenerator.h  NameGenerator.h  Noise.h  SystemGenerator.h
include/stellar/render/: Gl.h  MeshRenderer.h
include/stellar/sim/: Celestial.h  Contraband.h  Mission.h  MissionLogic.h  NavRoute.h  Orbit.h  Reputation.h  SaveGame.h  System.h  Traffic.h  Universe.h
src/core/: Hash.cpp  Log.cpp
src/econ/: Commodity.cpp  Economy.cpp  RoutePlanner.cpp
src/math/: Vec3.cpp
src/proc/: GalaxyGenerator.cpp  NameGenerator.cpp  Noise.cpp  SystemGenerator.cpp
src/render/: Gl.cpp  MeshRenderer.cpp
src/sim/: MissionLogic.cpp  NavRoute.cpp  Orbit.cpp  SaveGame.cpp  Traffic.cpp  Universe.cpp
stellarforge_patched_files_v2/: README.md
stellarforge_patched_files_v2/apps/stellar_game/: main.cpp
tests/: CMakeLists.txt  main.cpp  test_missions.cpp  test_nav.cpp  test_orbit.cpp  test_proc.cpp  test_route_planner.cpp  test_savegame.cpp  test_streaming.cpp
